--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "electron": "^40.0.0",
     "electron-builder": "^26.4.0",
+    "exceljs": "^4.4.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "sql.js": "^1.8.0"
