--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "electron": "^40.0.0",
     "electron-builder": "^26.4.0",
-    "electron-rebuild": "^3.2.9"
+    "electron-rebuild": "^3.2.9",
+    "electron-updater": "^6.7.3"
   }
 }
