--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Pradeep Kaliyawansha",
   "license": "MIT",
   "dependencies": {
+    "electron-updater": "^6.7.3",
     "exceljs": "^4.4.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
@@ -32,7 +33,8 @@
     "files": [
       "src/**/*",
       "database.js",
-      "package.json"
+      "package.json",
+      "node_modules/**/*"
     ],
     "directories": {
       "output": "dist"
@@ -41,7 +43,6 @@
   "devDependencies": {
     "electron": "^40.0.0",
     "electron-builder": "^26.4.0",
-    "electron-rebuild": "^3.2.9",
-    "electron-updater": "^6.7.3"
+    "electron-rebuild": "^3.2.9"
   }
 }
